[package]
name = "https"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["json"]}
ethers = "2.0.4"
serde = "1.0"
serde_derive = "1.0"
hyper = "0.14"
ring = "0.16"
base64 = "0.13"
tokio = { version = "1", features = ["full"]}