[package]
name = "https"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.10"
serde = "1.0"
serde_derive = "1.0"
hyper = { version = "0.14", features = ["server"] }
base64 = "0.13"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
reqwest = {version = "0.11", features = ["json"]}
log = "0.4"
env_logger = "0.9"