[package]
name = "rpc"
version = "0.1.0"
edition = "2021"
authors = ["Liam"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.9"
tokio = { version = "1.29.1", features = ["full", "rt-multi-thread"] }
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"
